--- a/contacto.html
+++ b/contacto.html
@@ -68,7 +68,7 @@
                     </fieldset>
             </div>
         </main>
-        <footer class="footer">
+        <footer class="footer wow">
             <div>
                 <h3>Whatsapp</h3>
                 <p>+54 9 2616924104</p>
