--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fredoka&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="estilo.css">
     <title>ROMA PASTAS 🍝</title>
 </head>
@@ -52,7 +53,7 @@
                 </div>
             </div>
         </main>
-        <footer class="footer">
+        <footer class="footer wow">
             <div>
                 <h3>Whatsapp</h3>
                 <p>+54 9 2616924104</p>
@@ -66,6 +67,11 @@
             </div>
         </footer>
     </div>
+    <script src="js/wow.min.js"></script>
+    <script>
+       new WOW().init();
+    </script>
+    
 </body>
 
 </html>
