--- a/productos.html
+++ b/productos.html
@@ -50,7 +50,7 @@
                 </div>
             </div>
         </main>
-        <footer class="footer">
+        <footer class="footer wow">
             <div>
                 <h3>Whatsapp</h3>
                 <p>+54 9 2616924104</p>
