--- a/contacto.html
+++ b/contacto.html
@@ -82,6 +82,10 @@
             </div>
         </footer>
     </div>
+    <script src="js/wow.min.js"></script>
+    <script>
+       new WOW().init();
+    </script>
 </body>
 
 </html>
