--- a/especialidades.html
+++ b/especialidades.html
@@ -68,5 +68,9 @@
  
     </footer>
     </div>
+    <script src="js/wow.min.js"></script>
+    <script>
+       new WOW().init();
+    </script>
 </body>
 </html>
