--- a/productos.html
+++ b/productos.html
@@ -64,6 +64,10 @@
             </div>
         </footer>
     </div>
+    <script src="js/wow.min.js"></script>
+    <script>
+       new WOW().init();
+    </script>
 </body>
 
 </html>
