Preparando entrega para PF2

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light">
+    <nav class="navbar navbar-expand-lg navbar-light navColor">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">ROMA PASTAS</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,7 +45,7 @@
             </div>
         </div>
     </nav>
-    <div>
+
         <main class="contenido">
             <div class="contenidoIndex">
                 <div class="contenidoIndex-texto">
@@ -67,20 +67,21 @@
                 </div>
             </div>
         </main>
+
         <footer class="footer wow">
             <div>
-                <h3>Whatsapp</h3>
-                <p>+54 9 2616924104</p>
-                <h3>Instagram</h3>
-                <p>/romapastas_</p>
+                <h4>Whatsapp</h4>
+                    <p>+54 9 2616924104</p>
+                <h4>Instagram</h4>
+                    <p>/romapastas_</p>
             </div>
             <div>
-                <h3>Dirección</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex atque, sunt fugit necessitatibus dicta
+                <h4>Dirección</h4>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex atque, sunt fugit necessitatibus dicta
                     et.</p>
             </div>
         </footer>
-    </div>
+
     <script src="js/wow.min.js"></script>
     <script>
        new WOW().init();
