--- a/nosotros.html
+++ b/nosotros.html
@@ -15,7 +15,8 @@
     <title>ROMA PASTAS 🍝</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light">
+    
+    <nav class="navbar navbar-expand-lg navbar-light navColor">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">ROMA PASTAS</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -42,13 +43,14 @@
             </div>
         </div>
     </nav>
-        <main class="contenido">
-            <div class="contenidoIndex">
-                <div>
-                    <img src="./images/istockphoto-607271928-1024x1024.jpg" alt="imagen de pastalinda" class="img">
-                </div>
-                <div class="contenidoIndex-texto">
-                    <h2>¿Quienes somos?</h2>
+
+    <main class="contenido">
+        <div class="contenidoIndex">
+            <div>
+                <img src="./images/istockphoto-607271928-1024x1024.jpg" alt="imagen de pastalinda" class="img">
+            </div>
+            <div class="contenidoNosotros-texto">
+                <h2>¿Quienes somos?</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit dolores tempora ducimus? Vitae
                         totam
                         itaque quia laboriosam laborum architecto? Quis perferendis dolore aliquam aut necessitatibus
@@ -60,23 +62,24 @@
                         exercitationem voluptatem possimus ullam assumenda laboriosam optio a incidunt. Aperiam nesciunt
                         quasi eaque perferendis odio odit, at quae deleniti placeat repellat excepturi consequatur autem
                         reiciendis, delectus sapiente eum. Excepturi mollitia fugiat ratione esse perferendis?</p>
-                </div>
             </div>
-        </main>
-        <footer class="footer wow">
-            <div>
-                <h3>Whatsapp</h3>
+        </div>
+    </main>
+    
+    <footer class="footer wow">
+        <div>
+            <h4>Whatsapp</h4>
                 <p>+54 9 2616924104</p>
-                <h3>Instagram</h3>
+            <h4>Instagram</h4>
                 <p>/romapastas_</p>
-            </div>
-            <div>
-                <h3>Dirección</h3>
+        </div>
+        <div>
+            <h4>Dirección</h4>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex atque, sunt fugit necessitatibus dicta
-                    et.</p>
-            </div>
-        </footer>
-    </div>
+                et.</p>
+        </div>
+    </footer>
+
     <script src="js/wow.min.js"></script>
     <script>
        new WOW().init();
