--- a/contacto.html
+++ b/contacto.html
@@ -15,7 +15,8 @@
     <title>ROMA PASTAS 🍝</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light">
+
+    <nav class="navbar navbar-expand-lg navbar-light navColor">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">ROMA PASTAS</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -42,6 +43,7 @@
             </div>
         </div>
     </nav>
+
     <main class="contenido">
         <div class="contenidoContacto">
                 <fieldset>
@@ -81,20 +83,21 @@
             </fieldset>
         </div>
     </main>
-        <footer class="footer wow">
-            <div>
-                <h3>Whatsapp</h3>
+
+    <footer class="footer wow">
+        <div>
+            <h4>Whatsapp</h4>
                 <p>+54 9 2616924104</p>
-                <h3>Instagram</h3>
+            <h4>Instagram</h4>
                 <p>/romapastas_</p>
-            </div>
-            <div>
-                <h3>Dirección</h3>
+        </div>
+        <div>
+            <h4>Dirección</h4>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex atque, sunt fugit necessitatibus dicta
-                    et.</p>
-            </div>
-        </footer>
-    </div>
+                et.</p>
+        </div>
+    </footer>
+
     <script src="js/wow.min.js"></script>
     <script>
        new WOW().init();
