--- a/productos.html
+++ b/productos.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light">
+    <nav class="navbar navbar-expand-lg navbar-light navColor">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">ROMA PASTAS</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -44,9 +44,10 @@
             </div>
         </div>
     </nav>
-        <main class="contenido">
-            <div class="contenidoProductos">
-                <h2>Productos</h2>
+
+    <main class="contenido">
+        <div class="contenidoProductos">
+            <h2>Productos</h2>
                 <div class="contenedorCards">
                     <div class="card">
                         <h3>FIDEOS</h3>
@@ -61,28 +62,31 @@
                         <img src="./images/panzottis.jpg" alt="producto panzottis">
                     </div>
                 </div>
-            </div>
-        </main>
-        <footer class="footer wow">
-            <div>
-                <h3>Whatsapp</h3>
+        </div>
+    </main>
+
+    <footer class="footer wow">
+        <div>
+            <h4>Whatsapp</h4>
                 <p>+54 9 2616924104</p>
-                <h3>Instagram</h3>
+            <h4>Instagram</h4>
                 <p>/romapastas_</p>
-            </div>
-            <div>
-                <h3>Dirección</h3>
+        </div>
+        <div>
+            <h4>Dirección</h4>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex atque, sunt fugit necessitatibus dicta
-                    et.</p>
-            </div>
-        </footer>
-    </div>
+                et.</p>
+        </div>
+    </footer>
+
     <script src="js/wow.min.js"></script>
     <script>
        new WOW().init();
     </script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+
+
 </body>
 
 </html>
