agrego el powered

--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
             </div>
         </main>
 
-        <footer class="footer wow">
+        <footer>
+            <section class="footer wow">
             <div>
                 <h4>Whatsapp</h4>
                     <p>+54 9 2616924104</p>
@@ -80,6 +81,12 @@
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex atque, sunt fugit necessitatibus dicta
                     et.</p>
             </div>
+            </section>
+            <section class="footerDerechos">
+                <h6>
+                    Powered by Sebastian Brennan &copy
+                </h6>
+            </section>
         </footer>
 
     <script src="js/wow.min.js"></script>
