--- a/index.html
+++ b/index.html
@@ -68,25 +68,26 @@
             </div>
         </main>
 
-        <footer>
-            <section class="footer wow">
+        <footer class="footer wow">
             <div>
                 <h4>Whatsapp</h4>
-                    <p>+54 9 2616924104</p>
+                <p>+54 9 2616924104</p>
                 <h4>Instagram</h4>
-                    <p>/romapastas_</p>
+                <p>/romapastas_</p>
             </div>
             <div>
                 <h4>Dirección</h4>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex atque, sunt fugit necessitatibus dicta
-                    et.</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex atque, sunt fugit necessitatibus dicta
+                et.</p>
             </div>
-            </section>
-            <section class="footerDerechos">
+        </footer>
+
+            </div>
+            <div class="footerDerechos">
                 <h6>
                     Powered by Sebastian Brennan &copy
                 </h6>
-            </section>
+            </div>
         </footer>
 
     <script src="js/wow.min.js"></script>
