--- a/contacto.html
+++ b/contacto.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fredoka&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="./css/estilo.css">
     <title>ROMA PASTAS 🍝</title>
 </head>
 <body>
@@ -97,6 +97,12 @@
                 et.</p>
         </div>
     </footer>
+
+    <div class="footerDerechos">
+        <h6>
+            Powered by Sebastian Brennan &copy
+        </h6>
+    </div>
 
     <script src="js/wow.min.js"></script>
     <script>
