--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Fredoka&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="./css/estilo.css">
     <title>ROMA PASTAS 🍝</title>
 </head>
 
@@ -81,14 +81,12 @@
                 et.</p>
             </div>
         </footer>
-
-            </div>
-            <div class="footerDerechos">
-                <h6>
-                    Powered by Sebastian Brennan &copy
-                </h6>
-            </div>
-        </footer>
+        
+        <div class="footerDerechos">
+            <h6>
+                Powered by Sebastian Brennan &copy
+            </h6>
+        </div>
 
     <script src="js/wow.min.js"></script>
     <script>
