agrego mixin en contenido sin variables

--- a/nosotros.html
+++ b/nosotros.html
@@ -45,7 +45,7 @@
     </nav>
 
     <main class="contenido">
-        <div class="contenidoIndex">
+        <div class="contenidoNosotros">
             <div>
                 <img src="./images/istockphoto-607271928-1024x1024.jpg" alt="imagen de pastalinda" class="img">
             </div>
