Optimizo imagenes y seo

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Pastas caseras congeladas. Ideales para tus comidas familiares en tan solo 3 minutos">
+    <meta name="keywords"  content="pastas, pastas caseras, congeladas, fideos, sorrentinos, panzottis, romapastas">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300&display=swap" rel="stylesheet">
@@ -63,7 +65,7 @@
                         reiciendis, delectus sapiente eum. Excepturi mollitia fugiat ratione esse perferendis?</p>
                 </div>
                 <div>
-                    <img src="./images/istockphoto-607271928-1024x1024.jpg" alt="imagen de pastalinda" class="img">
+                    <img src="./images/fideos.jpg" alt="imagen de fideos" title="Fideos" class="img">
                 </div>
             </div>
         </main>
