--- a/nosotros.html
+++ b/nosotros.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Pastas caseras congeladas. Ideales para tus comidas familiares en tan solo 3 minutos">
+    <meta name="keywords"  content="pastas, pastas caseras, congeladas, fideos, sorrentinos, panzottis, romapastas">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300&display=swap" rel="stylesheet">
@@ -47,21 +50,12 @@
     <main class="contenido">
         <div class="contenidoNosotros">
             <div>
-                <img src="./images/istockphoto-607271928-1024x1024.jpg" alt="imagen de pastalinda" class="img">
+                <img src="./images/romapastas.jpg" alt="Foto del equipo de cocineros de romapastas" title="RomaPastas" class="img">
             </div>
             <div class="contenidoNosotros-texto">
                 <h2>¿Quienes somos?</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit dolores tempora ducimus? Vitae
-                        totam
-                        itaque quia laboriosam laborum architecto? Quis perferendis dolore aliquam aut necessitatibus
-                        quas
-                        explicabo odit odio qui, eveniet hic cum ducimus rem numquam ullam recusandae animi?
-                        Consequuntur
-                        quidem dolores quo recusandae suscipit veritatis est rem fuga expedita porro! Et, ea blanditiis
-                        beatae eligendi at pariatur cumque maxime ipsam modi, debitis accusantium, aliquid dignissimos
-                        exercitationem voluptatem possimus ullam assumenda laboriosam optio a incidunt. Aperiam nesciunt
-                        quasi eaque perferendis odio odit, at quae deleniti placeat repellat excepturi consequatur autem
-                        reiciendis, delectus sapiente eum. Excepturi mollitia fugiat ratione esse perferendis?</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit dolores tempora ducimus? Vitae totam itaque quia laboriosam laborum architecto? Quis perferendis dolore aliquam aut necessitatibus quas explicabo odit odio qui, eveniet hic cum ducimus rem numquam ullam recusandae animi?Consequuntur quidem dolores quo recusandae suscipit veritatis est rem fuga expedita porro! Et, ea blanditiis beatae eligendi at pariatur cumque maxime ipsam modi, debitis accusantium, aliquid dignissimos
+                    exercitationem voluptatem possimus ullam assumenda laboriosam optio a incidunt. Aperiam nesciunt quasi eaque perferendis odio odit, at quae deleniti placeat repellat excepturi consequatur autem reiciendis, delectus sapiente eum. Excepturi mollitia fugiat ratione esse perferendis?</p>
             </div>
         </div>
     </main>
