--- a/productos.html
+++ b/productos.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Pastas caseras congeladas. Ideales para tus comidas familiares en tan solo 3 minutos">
+    <meta name="keywords"  content="pastas, pastas caseras, congeladas, fideos, sorrentinos, panzottis, romapastas">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300&display=swap" rel="stylesheet">
@@ -51,15 +54,15 @@
                 <div class="contenedorCards">
                     <div class="card">
                         <h3>FIDEOS</h3>
-                        <img src="./images/fideos.jpg" alt="producto fideos">
+                        <img src="./images/fideos-caseros.jpg" alt="producto fideos" title="Fideos caseros">
                     </div>
                     <div class="card">
                         <h3>SORRENTINOS</h3>
-                        <img src="./images/sorrentinos.jpg" alt="producto sorrentinos">
+                        <img src="./images/sorrentinos.jpg" alt="producto sorrentinos" title="Sorrentinos caseros">
                     </div>
                     <div class="card">
                         <h3>PANZOTTIS</h3>
-                        <img src="./images/panzottis.jpg" alt="producto panzottis">
+                        <img src="./images/panzottis.jpg" alt="producto panzottis" title="panzottis caseros">
                     </div>
                 </div>
         </div>
