--- a/contacto.html
+++ b/contacto.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Pastas caseras congeladas. Ideales para tus comidas familiares en tan solo 3 minutos">
+    <meta name="description" content="Pastas caseras congeladas. Ideales para tus comidas familiares en tan solo 3 minutos. Contáctanos">
     <meta name="keywords"  content="pastas, pastas caseras, congeladas, fideos, sorrentinos, panzottis, romapastas">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Fredoka&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/estilo.css">
-    <title>ROMA PASTAS 🍝</title>
+    <title>ROMA PASTAS🍝- Contáctate con nosotros</title>
 </head>
 <body>
 
