--- a/especialidades.html
+++ b/especialidades.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Pastas caseras congeladas. Ideales para tus comidas familiares en tan solo 3 minutos">
+    <meta name="description" content="Pastas caseras congeladas. Ideales para tus comidas familiares en tan solo 3 minutos. Conocé nuestras especialidades">
     <meta name="keywords"  content="pastas, pastas caseras, congeladas, fideos, sorrentinos, panzottis, romapastas">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Fredoka&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/estilo.css">
-    <title>ROMA PASTAS 🍝</title>
+    <title>ROMA PASTAS🍝- Nuestras especialidades</title>
 </head>
 <body>
 
@@ -51,21 +51,21 @@
         <div class="contenidoEsp">
             <div class="cardEsp">
                 <div>
-                    <h2>Fideos verdes con salsa blanca</h2>
+                    <h1>Fideos verdes con salsa blanca</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga porro voluptas consequuntur itaque doloremque est veritatis a sunt? Reprehenderit, illum quibusdam alias soluta quae odit, modi nam numquam exercitationem ducimus ad eveniet. Libero itaque officiis, aspernatur architecto odio explicabo molestias, neque minus labore recusandae a commodi qui error? Nesciunt deserunt ipsam nam quidem corrupti magnam modi culpa repellendus sequi officiis exercitationem error excepturi, vel explicabo minima odio facere quaerat hic enim alias consequuntur. Molestias distinctio dolorum quis fugiat optio rerum vero, tenetur officiis incidunt atque magni, provident delectus deleniti voluptas id placeat repudiandae temporibus nemo tempora commodi dolore cumque illo. Sequi at neque delectus dolor, nihil dolorem quasi culpa laborum perspiciatis reprehenderit nostrum consequuntur porro soluta minima ratione corrupti ex sint molestias, voluptate tempora deserunt enim debitis eaque praesentium. Soluta eius id labore deserunt praesentium numquam excepturi temporibus ut accusamus beatae voluptatem fugiat sit distinctio omnis laudantium necessitatibus rerum, maxime animi eos nostrum dignissimos? Dicta omnis laboriosam sunt id non fuga aut vitae sequi iste, enim facilis dolor, atque, et commodi aperiam debitis perferendis doloribus ut quae veritatis doloremque cumque! Suscipit magni assumenda, deleniti iste eveniet autem atque quis explicabo porro modi labore! Commodi, porro deserunt nam perferendis necessitatibus non.</p>
                 </div>
                 <img src="./images/fideos-verdes.jpg" alt="Imagen de fideos verdes" title="Fideos verdes con salsa blanca">
             </div>
             <div class="cardEsp">
                 <div>
-                    <h2>Sorrentinos de jamon y queso</h2>
+                    <h1>Sorrentinos de jamon y queso</h1>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae fuga ipsa cum sint ea, quisquam nostrum architecto exercitationem, sequi modi harum blanditiis officiis odio explicabo. Reprehenderit, magnam! Eligendi optio necessitatibus quidem repellendus quia? Natus rerum tempore facilis maiores, incidunt quo officiis quae dignissimos cupiditate. Soluta suscipit harum, eaque doloribus voluptate exercitationem illo nemo vero dolorem ullam in nisi quos aut numquam at sequi placeat quis voluptatibus? Sint quis maxime exercitationem aperiam laudantium temporibus perferendis reprehenderit fugiat molestiae dolorem neque nemo, odit nostrum debitis saepe in similique? Dolore sit voluptate, deserunt culpa quasi ratione quas eos, placeat cum harum rem eveniet, distinctio iure. Beatae consectetur ipsa, esse facilis repudiandae temporibus asperiores sunt dolores rerum voluptatem illum, omnis, libero ab. Sequi fugiat provident illo nihil. Maiores mollitia expedita, facilis voluptatem, obcaecati debitis voluptate voluptas repudiandae voluptatibus unde laborum. Earum eligendi vero saepe incidunt enim doloremque deserunt beatae alias. Itaque sequi distinctio corrupti ducimus placeat quasi saepe repellendus ad. Quisquam debitis perspiciatis optio, tenetur facilis incidunt fugiat. At pariatur sunt alias adipisci vitae veritatis illo omnis, minima provident velit fugiat quis cumque tempore saepe, illum necessitatibus rem inventore vel ipsum commodi beatae, ratione deleniti. Vero voluptates sed iste consectetur, temporibus in obcaecati quam?</p>
                 </div>
                 <img src="./images/sorrentinos-jamon-queso.jpg" alt="Imagen de sorrentinos de jamon y queso con salsa roja" title="Sorrentinos de jamón y queso">
             </div>
             <div class="cardEsp">
                 <div>
-                <h2>Panzottis de ricota y nuez</h2>
+                <h1>Panzottis de ricota y nuez</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga porro voluptas consequuntur itaque doloremque est veritatis a sunt? Reprehenderit, illum quibusdam alias soluta quae odit, modi nam numquam exercitationem ducimus ad eveniet. Libero itaque officiis, aspernatur architecto odio explicabo molestias, neque minus labore recusandae a commodi qui error? Nesciunt deserunt ipsam nam quidem corrupti magnam modi culpa repellendus sequi officiis exercitationem error excepturi, vel explicabo minima odio facere quaerat hic enim alias consequuntur. Molestias distinctio dolorum quis fugiat optio rerum vero, tenetur officiis incidunt atque magni, provident delectus deleniti voluptas id placeat repudiandae temporibus nemo tempora commodi dolore cumque illo. Sequi at neque delectus dolor, nihil dolorem quasi culpa laborum perspiciatis reprehenderit nostrum consequuntur porro soluta minima ratione corrupti ex sint molestias, voluptate tempora deserunt enim debitis eaque praesentium. Soluta eius id labore deserunt praesentium numquam excepturi temporibus ut accusamus beatae voluptatem fugiat sit distinctio omnis laudantium necessitatibus rerum, maxime animi eos nostrum dignissimos? Dicta omnis laboriosam sunt id non fuga aut vitae sequi iste, enim facilis dolor, atque, et commodi aperiam debitis perferendis doloribus ut quae veritatis doloremque cumque! Suscipit magni assumenda, deleniti iste eveniet autem atque quis explicabo porro modi labore! Commodi, porro deserunt nam perferendis necessitatibus non.</p>
                 </div>
                 <img src="./images/panzottis-ricota-nuez.jpg" alt="Imagen de fideos verdes" title="Panzottis de ricota y nuez">
