--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="./css/estilo.css">
-    <title>ROMA PASTAS 🍝</title>
+    <title>ROMA PASTAS🍝 Pastas caseras congeladas</title>
 </head>
 
 <body>
@@ -51,7 +51,7 @@
         <main class="contenido">
             <div class="contenidoIndex">
                 <div class="contenidoIndex-texto">
-                    <h2>Pastas caseras congeladas</h2>
+                    <h1>Pastas caseras congeladas</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit dolores tempora ducimus? Vitae
                         totam
                         itaque quia laboriosam laborum architecto? Quis perferendis dolore aliquam aut necessitatibus
