--- a/nosotros.html
+++ b/nosotros.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Pastas caseras congeladas. Ideales para tus comidas familiares en tan solo 3 minutos">
+    <meta name="description" content="Pastas caseras congeladas. Ideales para tus comidas familiares en tan solo 3 minutos. Conocé quienes somos">
     <meta name="keywords"  content="pastas, pastas caseras, congeladas, fideos, sorrentinos, panzottis, romapastas">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Fredoka&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/estilo.css">
-    <title>ROMA PASTAS 🍝</title>
+    <title>ROMA PASTAS🍝- ¿Quienes somos?</title>
 </head>
 <body>
     
@@ -53,7 +53,7 @@
                 <img src="./images/romapastas.jpg" alt="Foto del equipo de cocineros de romapastas" title="RomaPastas" class="img">
             </div>
             <div class="contenidoNosotros-texto">
-                <h2>¿Quienes somos?</h2>
+                <h1>¿Quienes somos?</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit dolores tempora ducimus? Vitae totam itaque quia laboriosam laborum architecto? Quis perferendis dolore aliquam aut necessitatibus quas explicabo odit odio qui, eveniet hic cum ducimus rem numquam ullam recusandae animi?Consequuntur quidem dolores quo recusandae suscipit veritatis est rem fuga expedita porro! Et, ea blanditiis beatae eligendi at pariatur cumque maxime ipsam modi, debitis accusantium, aliquid dignissimos
                     exercitationem voluptatem possimus ullam assumenda laboriosam optio a incidunt. Aperiam nesciunt quasi eaque perferendis odio odit, at quae deleniti placeat repellat excepturi consequatur autem reiciendis, delectus sapiente eum. Excepturi mollitia fugiat ratione esse perferendis?</p>
             </div>
