--- a/productos.html
+++ b/productos.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Pastas caseras congeladas. Ideales para tus comidas familiares en tan solo 3 minutos">
+    <meta name="description" content="Pastas caseras congeladas. Ideales para tus comidas familiares en tan solo 3 minutos. Conocé nuestros productos">
     <meta name="keywords"  content="pastas, pastas caseras, congeladas, fideos, sorrentinos, panzottis, romapastas">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Fredoka&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/estilo.css">
-    <title>ROMA PASTAS 🍝</title>
+    <title>ROMA PASTAS🍝- Nuestros productos</title>
 </head>
 
 <body>
@@ -50,19 +50,19 @@
 
     <main class="contenido">
         <div class="contenidoProductos">
-            <h2>Productos</h2>
+            <h1>Productos</h>
                 <div class="contenedorCards">
                     <div class="card">
-                        <h3>FIDEOS</h3>
+                        <h2>FIDEOS</h2>
                         <img src="./images/fideos-caseros.jpg" alt="producto fideos" title="Fideos caseros">
                     </div>
                     <div class="card">
-                        <h3>SORRENTINOS</h3>
+                        <h2>SORRENTINOS</h2>
                         <img src="./images/sorrentinos.jpg" alt="producto sorrentinos" title="Sorrentinos caseros">
                     </div>
                     <div class="card">
-                        <h3>PANZOTTIS</h3>
-                        <img src="./images/panzottis.jpg" alt="producto panzottis" title="panzottis caseros">
+                        <h2>PANZOTTIS</h2>
+                        <img src="./images/panzottis.jpg" alt="producto panzottis" title="Panzottis caseros">
                     </div>
                 </div>
         </div>
