--- a/index.html
+++ b/index.html
@@ -49,45 +49,14 @@
         </div>
     </nav>
 
-<<<<<<< HEAD
-        <main class="contenido">
-            <div class="contenidoIndex">
-                <div class="contenidoIndex-texto">
-                    <h1>Pastas caseras congeladas</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit dolores tempora ducimus? Vitae
-                        totam
-                        itaque quia laboriosam laborum architecto? Quis perferendis dolore aliquam aut necessitatibus
-                        quas
-                        explicabo odit odio qui, eveniet hic cum ducimus rem numquam ullam recusandae animi?
-                        Consequuntur
-                        quidem dolores quo recusandae suscipit veritatis est rem fuga expedita porro! Et, ea blanditiis
-                        beatae eligendi at pariatur cumque maxime ipsam modi, debitis accusantium, aliquid dignissimos
-                        exercitationem voluptatem possimus ullam assumenda laboriosam optio a incidunt. Aperiam nesciunt
-                        quasi eaque perferendis odio odit, at quae deleniti placeat repellat excepturi consequatur autem
-                        reiciendis, delectus sapiente eum. Excepturi mollitia fugiat ratione esse perferendis?</p>
-                </div>
-                <div>
-                    <img src="./images/fideos.jpg" alt="imagen de fideos" title="Fideos" class="img">
-                </div>
-            </div>
-        </main>
-
-        <footer class="footer wow">
-            <div>
-                <h4>Whatsapp</h4>
-                <p>+54 9 2616924104</p>
-                <h4>Instagram</h4>
-                <p>/romapastas_</p>
-=======
     <main class="contenido">
         <div class="contenidoIndex">
             <div class="contenidoIndex-texto">
-                <h2>Pastas caseras congeladas</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit dolores tempora ducimus? Vitae totam itaque quia laboriosam laborum architecto? Quis perferendis dolore aliquam aut necessitatibus quas explicabo odit odio qui, eveniet hic cum ducimus rem numquam ullam recusandae animi? Consequuntur quidem dolores quo recusandae suscipit veritatis est rem fuga expedita porro! Et, ea blanditiis beatae eligendi at pariatur cumque maxime ipsam modi, debitis accusantium, aliquid dignissimos exercitationem voluptatem possimus ullam assumenda laboriosam optio a incidunt. Aperiam nesciunt quasi eaque perferendis odio odit, at quae deleniti placeat repellat excepturi consequatur autem reiciendis, delectus sapiente eum. Excepturi mollitia fugiat ratione esse perferendis?</p>
->>>>>>> rama_1
+                <h1>Pastas caseras congeladas</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur in quos autem magnam, sint exercitationem fugiat nemo, culpa ipsum, ipsam quo est ullam repellendus cupiditate. Quaerat corrupti corporis voluptatem, tempora vitae dolore modi impedit eum vero minus architecto neque sed obcaecati itaque non debitis asperiores reprehenderit quibusdam assumenda in alias?</p>
             </div>
             <div>
-                <img src="./images/fideos.jpg" alt="imagen de fideos" title="Fideos" class="img">
+                    <img src="./images/fideos.jpg" alt="imagen de fideos" title="Fideos" class="img">
             </div>
         </div>
     </main>
