agrego clase active

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
     </main>
 
-    <footer class="text-dark footer">
+    <footer class="text-dark footer wow">
         <div class="container">
             <nav class="row">
                 <!--Logo-->
