--- a/nosotros.html
+++ b/nosotros.html
@@ -28,19 +28,19 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                        <a class="nav-link" aria-current="page" href="index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="productos.html">Productos</a>
+                        <a class="nav-link" href="productos.html">Productos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="especialidades.html">Especialidades</a>
+                        <a class="nav-link" href="especialidades.html">Especialidades</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="nosotros.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="contacto.html">Contacto</a>
+                        <a class="nav-link" href="contacto.html">Contacto</a>
                     </li>
                 </ul>
             </div>
@@ -60,7 +60,7 @@
         </div>
     </main>
     
-    <footer class="text-dark footer">
+    <footer class="text-dark footer wow">
         <div class="container">
             <nav class="row">
                 <!--Logo-->
