--- a/productos.html
+++ b/productos.html
@@ -52,18 +52,18 @@
         <div class="contenidoProductos">
             <h1>Productos</h>
                 <div class="contenedorCards">
-                    <div class="card">
+                    <a class="card" href="especialidades.html#fideosReceta">
                         <h2>FIDEOS</h2>
                         <img src="./images/fideos-caseros.jpg" alt="producto fideos" title="Fideos caseros">
-                    </div>
-                    <div class="card">
+                    </a>
+                    <a class="card" href="especialidades.html#sorrentinosReceta">
                         <h2>SORRENTINOS</h2>
                         <img src="./images/sorrentinos.jpg" alt="producto sorrentinos" title="Sorrentinos caseros">
-                    </div>
-                    <div class="card">
+                    </a>
+                    <a class="card" href="especialidades.html#panzottisReceta">
                         <h2>PANZOTTIS</h2>
                         <img src="./images/panzottis.jpg" alt="producto panzottis" title="Panzottis caseros">
-                    </div>
+                    </a>
                 </div>
         </div>
     </main>
